crates/soul-attributes/tests/ui/duplicate_keys.rs
use soul_attributes::soul;

#[soul(id = "interaction.checkout.create-order", id = "duplicate")]
fn annotated() {}

fn main() {}
